feat: Refactor API calls and configuration
Integrates the employee data API with a local proxy and updates data transformation logic.

Changes include:
- Updating `api.ts` to fetch from `/api/employees` and transforming the new API response format.
- Configuring `vercel.json` to rewrite `/api/employees` to the backend endpoint.
- Setting up Vite development server proxy for `/api/employees` to the backend.
- Removing unused `cn.ts` utility.
- Adding a test script to verify API interaction.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/employees",
+      "destination": "https://backend.jotish.in/backend_dev/gettabledata.php"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
